[tool.poetry]
name = "src"
version = "0.1.0"
description = "Project using biology boilerplate"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.4"
pandas = "^1.5.1"
biopython = "^1.79"
pysam = "^0.20.0"
scipy = "^1.9.3"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
ipython = "^8.6.0"
jupyterlab = "^3.5.0"
notebook = "^6.5.2"

[tool.poetry.scripts]
main = "src:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
